--- a/bop/templates/layout.html
+++ b/bop/templates/layout.html
@@ -13,10 +13,10 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/footer.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/media_query.css') }}">
 	
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='slick/slick-theme.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='slick/slick.css') }}">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Chivo|Unica+One|Prompt|Abel" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='slick/slick.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='slick/slick-theme.css') }}">
 	<!--if exists, set title of each page. if not, set default 'Bliss of Pain'--->
         {% if title %}
                 <title>Bliss of Pain - {{ title }}</title>
@@ -122,15 +122,16 @@
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="{{ url_for('static', filename='js/gallery.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/instafeed.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/instafeed.custom.js') }}"></script>
-	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-	<script type="text/javascript" src="slick/slick.min.js"></script>
+	<script src="{{ url_for('static', filename='slick/slick.min.js') }}"></script>
+	
 </body>
 </html>
 
